--- a/tuas-portfolio/src/styles/Header.css
+++ b/tuas-portfolio/src/styles/Header.css
@@ -3,7 +3,7 @@
     justify-content: flex-end; /* align everything to the right */
     align-items: center;
     padding: 1em;
-    background-color: #228B22;
+    background-color: #57cc99
   }
   
   .header h1 {
