--- a/tuas-portfolio/src/styles/Contact.css
+++ b/tuas-portfolio/src/styles/Contact.css
@@ -1,23 +1,50 @@
+/* contact.css */
 .contact {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    font-family: Arial, sans-serif;
+    background-color: #f3f3f3;
+  }
+  
+  .card {
+    width: 80%;
+    max-width: 600px;
+    margin: 40px auto;
+    padding: 30px;
+    background-color: #fff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+  }
+  
+  .form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
   }
   
   label {
     display: block;
     font-weight: bold;
-    margin-bottom: 5px;
+    font-size: 1.1rem;
+    margin-bottom: 10px;
+    color: #333;
   }
   
   input,
   textarea {
     width: 100%;
-    padding: 10px;
+    padding: 12px;
     margin-bottom: 20px;
-    border: none;
+    border: 1px solid #ddd;
     background-color: #f0f0f0;
     border-radius: 5px;
+    font-size: 1rem;
+  }
+  
+  textarea {
+    resize: vertical;
   }
   
   button[type="submit"] {
@@ -27,27 +54,11 @@
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    font-size: 1.1rem;
     transition: all 0.3s ease;
   }
   
   button[type="submit"]:hover {
     background-color: #0062cc;
-  }
-  
-  .card {
-    width: 80%;
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: #fff;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
-  }
-  
-  .form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
   }
   
