--- a/tuas-portfolio/src/styles/About.css
+++ b/tuas-portfolio/src/styles/About.css
@@ -1,31 +1,45 @@
 .about-container {
-    background-image: url('');
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-  }
-  
+  background-image: url('');
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.profile-picture-container {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin-bottom: 20px;
+}
+
+.profile-picture-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.about-content {
+  max-width: 800px;
+  text-align: center;
+  color: #fff;
+}
+
+/* Media queries for smaller screens */
+@media only screen and (max-width: 600px) {
   .profile-picture-container {
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    overflow: hidden;
-    margin-bottom: 20px;
+    width: 150px;
+    height: 150px;
   }
-  
-  .profile-picture-container img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+}
+
+/* Media queries for larger screens */
+@media only screen and (min-width: 1200px) {
+  .about-container {
+    height: 80vh;
   }
-  
-  .about-content {
-    max-width: 800px;
-    text-align: center;
-    color: #fff;
-  }
-  
+}
