--- a/tuas-portfolio/src/styles/Header.css
+++ b/tuas-portfolio/src/styles/Header.css
@@ -1,34 +1,55 @@
 .header {
-    display: flex;
-    justify-content: flex-end; /* align everything to the right */
+  display: flex;
+  justify-content: flex-end; /* align everything to the right */
+  align-items: center;
+  padding: 1em;
+  background-color: #57cc99;
+}
+
+.header h1 {
+  font-size: 2em;
+  margin: 0;
+}
+
+.header ul {
+  list-style: none;
+  margin: 0;
+  display: flex;
+}
+
+.header ul li {
+  margin: 0 1em;
+}
+
+.header ul li a {
+  color: #333;
+  text-decoration: none;
+  font-weight: bold;
+  transition: color 0.2s ease-in-out;
+}
+
+.header ul li a:hover {
+  color: #0077cc;
+}
+
+/* Media queries for smaller screens */
+@media only screen and (max-width: 600px) {
+  .header {
+    flex-direction: column;
     align-items: center;
-    padding: 1em;
-    background-color: #57cc99
+    justify-content: center;
   }
-  
+
   .header h1 {
-    font-size: 2em;
-    margin: 0;
+    font-size: 1.5em;
+    margin-bottom: 0.5em;
   }
-  
+
   .header ul {
-    list-style: none;
-    margin: 0;
-    display: flex;
+    flex-direction: column;
   }
-  
+
   .header ul li {
-    margin: 0 1em;
+    margin: 0.5em 0;
   }
-  
-  .header ul li a {
-    color: #333;
-    text-decoration: none;
-    font-weight: bold;
-    transition: color 0.2s ease-in-out;
-  }
-  
-  .header ul li a:hover {
-    color: #0077cc;
-  }
-  
+}
