--- a/tuas-portfolio/src/styles/Footer.css
+++ b/tuas-portfolio/src/styles/Footer.css
@@ -1,11 +1,13 @@
-/* footer.css */
+/* Footer.css */
 .footer {
+  position: fixed;
+  bottom: 0;
+  height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #222;
   color: #fff;
-  padding: 20px 0;
   width: 100%;
 }
 
@@ -22,19 +24,11 @@
   color: #007bff;
 }
 
-.footer i {
-  margin-right: 5px;
-  font-size: 1.2rem;
+.footer span {
+  margin-left: 5px;
 }
 
-/* Media queries for smaller screens */
-@media only screen and (max-width: 600px) {
-  .footer {
-    flex-direction: column;
-    text-align: center;
-  }
-
-  .footer a {
-    margin: 5px 0;
-  }
+.footer img {
+  height: 20px;
+  margin-right: 5px;
 }
