--- a/tuas-portfolio/src/styles/About.css
+++ b/tuas-portfolio/src/styles/About.css
@@ -1,12 +1,12 @@
 .about-container {
-  background-image: url('');
+  background-image: url('../styles/Images/BGphoto.png');
   background-size: cover;
   background-position: center;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .profile-picture-container {
@@ -14,7 +14,7 @@
   height: 200px;
   border-radius: 50%;
   overflow: hidden;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
 }
 
 .profile-picture-container img {
@@ -24,7 +24,7 @@
 }
 
 .about-content {
-  max-width: 800px;
+  max-width: 900px;
   text-align: center;
   color: #fff;
 }
@@ -42,4 +42,10 @@
   .about-container {
     height: 80vh;
   }
+}
+
+.card {
+  background-color: #333333;
+  border-radius: 10px;
+  padding: 16px;
 }
