--- a/tuas-portfolio/src/styles/Header.css
+++ b/tuas-portfolio/src/styles/Header.css
@@ -1,34 +1,34 @@
 .header {
   display: flex;
-  justify-content: flex-end; /* align everything to the right */
+  justify-content: space-between;
   align-items: center;
-  padding: 1em;
+  padding: 2em;
   background-color: #57cc99;
 }
 
 .header h1 {
-  font-size: 2em;
+  font-size: 4em;
   margin: 0;
 }
 
-.header ul {
+.nav-items ul {
   list-style: none;
   margin: 0;
   display: flex;
 }
 
-.header ul li {
+.nav-items ul li {
   margin: 0 1em;
 }
 
-.header ul li a {
+.nav-items ul li a {
   color: #333;
   text-decoration: none;
   font-weight: bold;
   transition: color 0.2s ease-in-out;
 }
 
-.header ul li a:hover {
+.nav-items ul li a:hover {
   color: #0077cc;
 }
 
@@ -38,18 +38,28 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 1em;
   }
 
   .header h1 {
-    font-size: 1.5em;
+    font-size: 2em;
     margin-bottom: 0.5em;
   }
 
-  .header ul {
+  .nav-items ul {
     flex-direction: column;
   }
 
-  .header ul li {
+  .nav-items ul li {
     margin: 0.5em 0;
   }
+}
+
+.name {
+  padding-right: 20px;
+}
+
+.name h1 {
+  font-size: 3rem;
+  margin: 0;
 }
