--- a/tuas-portfolio/src/styles/Resume.css
+++ b/tuas-portfolio/src/styles/Resume.css
@@ -1,127 +1,42 @@
 .resume-container {
   max-width: 800px;
-  margin: 0 auto;
-  padding: 20px;
-  text-align: center;
-  font-family: 'Roboto', sans-serif;
+  margin: auto;
+  padding: 40px;
 }
-
-/* Add the rest of your CSS styles below */
 
 .resume-container h1 {
-  font-size: 3rem;
+  text-align: center;
   margin-bottom: 20px;
-  color: #333;
-}
-
-.resume-container h2 {
-  font-size: 2rem;
-  margin-bottom: 15px;
-  color: #007bff;
-}
-
-.resume-container h3 {
-  font-size: 1.8rem;
-  margin-bottom: 10px;
-  color: #333;
-}
-
-.resume-container h4 {
-  font-size: 1.5rem;
-  margin-bottom: 5px;
-  color: #555;
-}
-
-.resume-container h5 {
-  font-size: 1.2rem;
-  margin-bottom: 15px;
-  color: #777;
-}
-
-.resume-container p {
-  font-size: 1.2rem;
-  margin-bottom: 10px;
-  color: #231;
 }
 
 .resume-container a {
-  font-size: 1.2rem;
-  color: #007bff;
-  text-decoration: none;
+  display: block;
+  text-align: center;
+  margin-bottom: 40px;
 }
 
-.resume-container a:hover {
-  text-decoration: underline;
+.card {
+  background-color: #f9f9f9;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  margin-bottom: 20px;
 }
 
-.resume-container section {
-  margin-bottom: 30px;
+.card h3 {
+  margin-top: 0;
 }
 
-.resume-container .skills-container {
+.card h4, .card h5 {
+  margin: 0;
+  font-weight: normal;
+}
+
+.skills-container {
   display: flex;
-  justify-content: space-between; /* align sections to left and right */
   flex-wrap: wrap;
-  gap: 30px;
-  background-color: #57cc99; /* add background color */
-  padding: 20px; /* add padding */
+  justify-content: space-between;
 }
 
-.resume-container .skills-section {
-  width: 48%; /* give each section a width of 48% */
-  text-align: left; /* align section content to left */
-}
-
-.resume-container ul {
-  list-style: none;
-  padding: 0;
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-}
-
-.resume-container li {
-  font-size: 1.2rem;
-  color: #333;
-}
-
-/* Media queries for smaller screens */
-@media only screen and (max-width: 600px) {
-  .resume-container {
-    padding: 10px;
-  }
-
-  .resume-container h1 {
-    font-size: 2.5rem;
-    margin-bottom: 15px;
-  }
-
-  .resume-container h2 {
-    font-size: 1.8rem;
-    margin-bottom: 10px;
-  }
-
-  .resume-container h3 {
-    font-size: 1.5rem;
-    margin-bottom: 5px;
-  }
-
-  .resume-container h4 {
-    font-size: 1.2rem;
-    margin-bottom: 5px;
-  }
-
-  .resume-container h5 {
-    font-size: 1rem;
-    margin-bottom: 10px;
-  }
-
-  .resume-container p {
-    font-size: 1rem;
-    margin-bottom: 5px;
-  }
-
-  .resume-container a {
-    font-size: 1rem
-  }
+.skills-container .card {
+  flex-basis: 48%;
 }
