--- a/tuas-portfolio/src/styles/About.css
+++ b/tuas-portfolio/src/styles/About.css
@@ -1,5 +1,5 @@
 .about-container {
-  background-image: url('../styles/Images/BGphoto.png');
+  background-image: url('../styles/Images/Northern-Lights.png');
   background-size: cover;
   background-position: center;
   display: flex;
